--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
         </div> -->
         <h3 class="cont-name" align:"center">Naveen Kumar<span class="designation"> (Owner) </span></h3>
         <div class="cont">
-          <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!" class="link">
+          <a href="whatsapp://send?abid=9980143133&text=Hello%2C%20World!" class="link">
             <i class="fa fa-whatsapp icon" aria-hidden="true"></i><span class="link-text">+91 9980143133</span>
           </a>
         </div>
