--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
         </div> -->
         <h3 class="cont-name" align:"center">Naveen Kumar<span class="designation"> (Owner) </span></h3>
         <div class="cont">
-          <a href="https://api.whatsapp.com/send?phone=9980143133&text=Hi20%a20%quote" class="link">
+          <a href="https://api.whatsapp.com/send?phone=+919980143133&text=Hi20%a20%quote" class="link">
             <i class="fa fa-whatsapp icon" aria-hidden="true"></i><span class="link-text">+91 9980143133</span>
           </a>
         </div>
