--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/madilu-small.png" rel="icon">
-  <link href="assets/img/madilu-small.png" rel="apple-touch-icon">
+  <link href="assets/img/madilu-icon.png" rel="icon">
+  <link href="assets/img/madilu-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
