--- a/registration.html
+++ b/registration.html
@@ -73,7 +73,7 @@
     </div>
   </nav><!-- End Header/Navbar -->
 
-
+  <a href="https://api.whatsapp.com/send?phone=+919205153512&text=Hey, I have a query." id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
 
   <div class="container reg-form">
     <h1 class="brand"><b>MADILU Registration Form</b></h1>
