--- a/reviews.html
+++ b/reviews.html
@@ -71,6 +71,9 @@
       </div>
     </div>
   </nav><!-- End Header/Navbar -->
+
+  <a href="https://api.whatsapp.com/send?phone=+919205153512&text=Hey, I have a query." id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
+
   <br>
   <section class="section-testimonials section-t8 ">
     <div class="container">
