--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </nav><!-- End Header/Navbar -->
-
+  <a href="https://api.whatsapp.com/send?phone=+919205153512&text=Hey, I have a query." id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
   <main id="main">
 
     <!-- ======= Intro Single ======= -->
@@ -132,7 +132,7 @@
         </div>
       </div>
     </section>
-
+    
    
   </main><!-- End #main -->
 
