--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
     </div>
   </div>
   <!-- End Intro Section -->
+
+  <a href="mailto:shree@shreechemicalsnepal.com" id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
+
   <br>
   <main id="main">
 
@@ -196,7 +199,7 @@
             <div class="card-box-c foo">
               <div class="card-header-c d-flex">
                 <div class="card-box-ico">
-                  <span class="fa fa-cutlery"></span>
+                  <span class="fa fa-cutlery" aria-hidden="true"></span>
                 </div>
                
               </div>
@@ -797,7 +800,6 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/scrollreveal/scrollreveal.min.js"></script>
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
