--- a/pg.html
+++ b/pg.html
@@ -73,6 +73,7 @@
       </div>
     </div>
   </nav><!-- End Header/Navbar -->
+  <a href="https://api.whatsapp.com/send?phone=+919205153512&text=Hey, I have a query." id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
   <main id="main">
 
     <!-- ======= Intro Single ======= -->
