--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </div>
   <!-- End Intro Section -->
 
-  <a href="mailto:shree@shreechemicalsnepal.com" id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=+918073729033&text=Hey, I have a query." id="whatsapp-icon"><i class="fa fa-whatsapp"></i></a>
 
   <br>
   <main id="main">
